# DB-mlops-genai

./: pyproject.toml
demos/course3-capstone/: Cargo.toml  README.md
demos/course3-capstone/src/: lib.rs  main.rs
demos/course4/: README.md
demos/course4/capstone/: Cargo.toml  README.md
demos/course4/capstone/src/: main.rs
