[package]
name = "code-intelligence-rag"
version = "0.1.0"
edition = "2021"
description = "Code Intelligence RAG: quality-aware code retrieval using trueno-rag + pmat"
license = "MIT"

[dependencies]
trueno-rag = { version = "0.2", default-features = false, features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1"

[features]
default = []
embeddings = ["trueno-rag/embeddings"]
